# pgw-protei

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  bcd.cpp  bcd.h  config.cpp  config.h  logger.cpp  logger.h
configs/: client.json  server.json
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt  bcd.cpp  bcd.h  config.cpp  config.h  logger.cpp  logger.h  socket.cpp  socket.h  socket_raii.cpp
libs/pgw_core/: CMakeLists.txt  cdr_writer.cpp  cdr_writer.h  epoll_raii.cpp  epoll_raii.h  session_manager.cpp  session_manager.h
pgw_client/: CMakeLists.txt  pgw_client.cpp
pgw_core/: CMakeLists.txt  cdr_writer.cpp  cdr_writer.h  session_manager.cpp  session_manager.h
pgw_server/: CMakeLists.txt  pgw_server.cpp
tests/: CMakeLists.txt  common_lib_test.cpp  pgw_core_test.cpp
